ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sakpaas-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sakpaas-ip
    networking.gke.io/managed-certificates: "frontend-certificate,backend-certificate,welcome-certificate,frontend-certificate-robspot,backend-certificate-robspot,grafana-certificate"
spec:
  backend:
    serviceName: frontend-service
    servicePort: 80
  rules:
  - host: happyhamster.org
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
  - host: welcome.happyhamster.org
    http:
      paths:
      - backend:
          serviceName: welcome-service
          servicePort: 80
  - host: api.happyhamster.org
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 80
  - host: happyhamster.robspot.de
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
  - host: dev.robspot.de
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 80
